k8s/eureka-deployment.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka
  name: eureka-np
spec:
  ports:
  - name: eureka
    port: 8761
    nodePort: 30001
  selector:
    app: eureka
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka
  name: eureka
spec:
  ports:
  - name: eureka
    port: 8761
    nodePort: 30002
  selector:
    app: eureka
  type: NodePort

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  serviceName: 'eureka'
  replicas: 3
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka-service
        image: eureka-service
        imagePullPolicy: Never
        ports:
        - containerPort: 8761
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1200Mi"
            cpu: "500m"
        lifecycle:
          preStop:
            exec:
              command: ["sh","-c","sleep 10"]
        livenessProbe:
          httpGet:
            path: /health
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
