k8s/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: tester
      containers:
      - image: gateway-service
        name: gateway-service
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["sh","-c","sleep 10"]
        livenessProbe:
          httpGet:
            port: 8080
            path: /health
        readinessProbe:
          httpGet:
            port: 8080
            path: /health
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  ports:
  - name: gateway
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway
  type: NodePort
status:
  loadBalancer: {}
