k8s/sebuah-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sebuah
  name: sebuah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sebuah
  strategy: {}
  template:
    metadata:
      labels:
        app: sebuah
    spec:
      serviceAccountName: tester
      containers:
      - image: sebuah-service
        name: sebuah-service
        imagePullPolicy: Never
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["sh","-c","sleep 10"]
        livenessProbe:
          httpGet:
            port: 8080
            path: /health
        readinessProbe:
          httpGet:
            port: 8080
            path: /health
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sebuah
  name: sebuah
spec:
  ports:
  - name: sebuah
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sebuah
  type: NodePort
status:
  loadBalancer: {}
