k8s/seketika-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seketika
  name: seketika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seketika
  strategy: {}
  template:
    metadata:
      labels:
        app: seketika
    spec:
      serviceAccountName: tester
      containers:
      - image: seketika-service
        name: seketika-service
        imagePullPolicy: Never
        resources: {}
        lifecycle:
          preStop:
            exec:
              command: ["sh","-c","sleep 10"]
        livenessProbe:
          httpGet:
            port: 8080
            path: /health
        readinessProbe:
          httpGet:
            port: 8080
            path: /health
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: seketika
  name: seketika
spec:
  ports:
  - name: seketika
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: seketika
  type: NodePort
status:
  loadBalancer: {}
