k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: cuma.nyobanyoba
    http:
      paths:
      - path: /seketika
        backend:
          serviceName: seketika
          servicePort: 8080
      - path: /sebuah
        backend:
          serviceName: sebuah
          servicePort: 8080
      - path: /sebuah
        backend:
          serviceName: sebuah
          servicePort: 8080
